--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: Bus_development
+  database: Bus_production
   pool: 5
   username: root
   password:
